# geocoder

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  cities.txt  cities500.txt  loadtest.js
.github/workflows/: docker-publish.yml
demo/: index.html
deploy/: Chart.yaml  values.yaml
deploy/templates/: deployment.yaml  hpa.yaml  service.yaml
geocoder/: Cargo.toml
geocoder/benches/: geocoder_bench.rs
geocoder/src/: errors.rs  geocoder.rs  main.rs
web/: Cargo.toml
web/src/: config.rs  errors.rs  handlers.rs  main.rs  middleware.rs
