[package]
name = "geocoder"
version = "0.1.0"
edition = "2021"

[lib]
name = "geocoder"
path = "src/geocoder.rs"

[dependencies]
serde = "1.0.160"
kiddo = "2.0.1"
csv = "1.2.1"
tracing = "0.1.37"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"
tracing-test = "0.2.4"

[[bench]]
name = "geocoder_bench"
harness = false