[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
geocoder = { path = "../geocoder" }
axum = { version = "0.6"}
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.4", features = ["trace"] }
tower_governor = "0.0.4"
serde = "1.0"
thiserror = "1.0"
once_cell = "1.17"
geojson = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
dotenvy = "0.15"
